validaton phone,password
