# api/docs/swagger.yaml
@@ -6,6 +6,20 @@ definitions:
       id:
         type: string
     type: object
+  models.LoginRequest:
+    properties:
+      login:
+        type: string
+      password:
+        type: string
+    type: object
+  models.LoginResponse:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
   models.Response:
     properties:
       data: {}
@@ -53,6 +67,8 @@ definitions:
       last_name:
         type: string
       mail:
+        type: string
+      password:
         type: string
       phone:
         type: string
@@ -640,6 +656,40 @@ paths:
       summary: get lesson now
       tags:
       - teacher
+  /teacher/login:
+    post:
+      consumes:
+      - application/json
+      description: Teacher login
+      parameters:
+      - description: login
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Teacher login
+      tags:
+      - auth
   /teacher/update/{id}:
     put:
       consumes:
